# similar

./: Makefile  Makefile.am  README.md  configure.ac  similar.cc
